9374 svr4pkg: comparison between pointer and zero character constant Reviewed by: Andy Fiddaman <omnios@citrus-it.co.uk> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>